static/css/style.css
* {
    /* Don't set font family for everything, as it messes with code blocks */
    /* font-family: 'avenir next' ,'avenir', sans-serif */
}

p, h1, h2, h3, ul, li, a, div {
    /* font-family: 'Nunito', sans-serif; */
    font-family: 'avenir next' ,'avenir', sans-serif;
    
}

/* Styling for page titles */
h1.f1 {
    font-size: 3rem;
}

/* Styling for major sections in content */
h1 {
    font-size: 2rem;
}

p, li, div {
    font-size: 1.25rem;
    line-height: 1.5;
    color: rgb(85, 85, 85);
}

figcaption p {
    font-size: 80%;
    font-style: italic;
    color: gray;
    text-align: center;
}

/* ========================================================================= */
/* TABLE STYLING                                                             */
/* ========================================================================= */

/* Center tables inside page content */
div.content table {
    margin-left: auto; 
    margin-right: auto;
    font-size: 1.1rem;
}

div.content th {
    background-color: #505050;
    color: white;
    font-weight: normal;
    padding: 10px;
}

div.content tr:nth-of-type(even) {
    background:#E8E8E8;
}

div.content tr:nth-of-type(odd) {
    background:#EFEFEF;
}

div.content td {
    text-align: center; /* This messes up list identifiers (e.g. bullet points), so we fix this below */
    padding: 2px;
}

div.content td ul {
    display: inline-block; /* This makes list identifiers look good within table cells when contents are centered */
}

div.content td li {
    text-align: left; /* Left aligns text in lists */
}

/* Allow for special paragraphs that have centered text */
div.content p.centered {
    text-align: center;
}

/* Center single images on the page */
div.box {
    margin: auto;
}

/* ========================================================================= */
/* BREADCRUMBS                                                               */
/* ========================================================================= */

.breadcrumbs {
    font-size: 1.0rem;
}

/* ========================================================================= */
/* CODE                                                                      */
/* ========================================================================= */

pre, .pre {
    overflow-x: auto;
    overflow-y: hidden;
    overflow:   scroll;
}

pre code {
    display: block;
    padding: 1.5em 1.5em;
    white-space: pre;
    font-size: .875rem;
    line-height: 2;
}

pre {
    background-color: #222;
    color: #ddd;
    white-space: pre;
    hyphens: none;
    position: relative;
}

/* Styling for inline code (no pre element) */
code {
    border-radius: 5px; 
    -moz-border-radius: 5px; 
    -webkit-border-radius: 5px; 
    border: 1px solid #BCBEC0;
    padding: 2px;     
}

/* ========================================================================= */
/* BLOCK QUOTES                                                              */
/* ========================================================================= */

blockquote {    
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 50px;
    padding-left: 15px;
    border-left: 3px solid #ccc;    
}

/* markdown wraps the text inside a p element */
blockquote p {
    font-size: 1.2rem;
}

/* ========================================================================= */
/* POST STYLING                                                              */
/* ========================================================================= */

/* Disable link styling for post titles */
.post-title {
    text-decoration: none;
    color: inherit;
}

article {
    /* This forces content to stay within the bounds of the article element and wrap if needed */
    width: 100%;
}

/* ========================================================================= */
/* MAIN PAGE STYLING                                                         */
/* ========================================================================= */

html {
    height: 100%;
}

body {
    height: 100%;
    display: flex;
    flex-direction: row;
    background-color: rgb(241, 241, 241);
}

/* Left column contains logo and menu */
.left-column {
    height: 100%;
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: flex-start;

    background-color: white;
    width: 30%;
    max-width: 450px;

    /* Add subtle border to left-hand column */
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.15); 
}

.logo-img {
    width: 70%;
}

.logo-img img {
    width: 100%;
}

.site-title {
    color: rgb(51, 51, 51);
    font-size: 24px;
    font-weight: 700;

    width: 80%;
    text-align: center;
}

/* Disable any link styling for the site title */
.site-title a {
    text-decoration: none;
    color: inherit;
}

.site-description {
    color: rgb(51, 51, 51);
    font-size: 1.0rem;
    font-weight: 400;

    margin-top: 7px;
    width: 60%;
    text-align: center;
}

/* Right column contains page content */
.right-column {
    height: 100%;
    flex: 1;

    display: flex;
    flex-flow: column;
    align-items: center;
}

.inner-right-column {
    width: 90%;
    max-width: 800px;
    margin-top: 5%;
    background-color: white;

    /* Add subtle border to right-hand content */
    box-shadow: 0 0 1px rgba(0, 0, 0, 0.15); 

    /* Stops long URLs and strings going of the right-hand side of the column */
    word-break: break-word;
}

/* Padding between border of right-hand inner column and content */
main {
    padding: 50px;
}

.homepage-post-content {
    padding-bottom: 50px;
}

/* ========================================================================= */
/* IMAGE STYLING                                                             */
/* ========================================================================= */

figure img {
    width: 100%; /* Force images to stay within the confines of the parent container */
}

/* ========================================================================= */
/* MENU STYLING                                                         */
/* ========================================================================= */

.menu {
    display: block;
    z-index: 999999;
    margin: 0;
    margin-top: 20px;
    padding: 0;
}

.menu li {
    display: block;
    position: relative;
    margin: 0;
    padding: 0;
    width: 200px;
}

.menu li.dropdown:hover > .submenu {
    display: block;
}

.menu li a {
    display: flex;
    width: 200px;
    /* Below padding controls spacing of adjacent menu elements */
    padding: 12px 8px; 
    /* padding: 12px; */
    background: rgb(34, 34, 34);
    color: #fff;
    text-decoration: none;
}

.menu .menu-text {
    width: 165px;
    color: #fff;
    line-height: 1.0;
    font-size: 0.9rem;

    /* Center the text vertically */
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
}

.menu .right-arrow {
    color: #fff;
    line-height: 1.0;
    font-size: 0.7rem;
}

.menu li.dropdown > a::after {
    /* content: "▶";
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    text-decoration: none !important;
    font-weight: 400;
    margin-left: 8px;
    font-size: 10px; */
}

.menu li a::before {
    /* content: "\e179";
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: 400;
    margin-right: 8px; */
}

.menu li a:hover {
    background: grey;
    text-decoration: underline;
}

.menu .submenu {
    display: none;
    top: 0px; /* This brings the sub-menu vertically in-line with the menu */
}

.submenu .menu-text {
    color: rgb(85, 85, 85);
}


.submenu {
    margin: 0px;
    padding: 0px;
    position: absolute;
    left: 200px;
    list-style-type: none;
    display: block;
    width: 200px;
    z-index: 9;
}

.submenu li {
    display: block;
    margin: 0;
}

.submenu li a {
    display: flex;
    background: rgb(241, 241, 241);
    color: rgb(34, 34, 34);
    /* padding: 8px 6px; */
    /* padding: 0px; */
    /* margin-bottom: 1px; */
}

.submenu .right-arrow {
    color: rgb(34, 34, 34);
    line-height: 1.0;
    font-size: 0.7rem;
}

.menu .submenu > li.dropdown:hover > .submenu {
    display: block;
}

.menu .submenu .submenu {
    position: absolute;
    left: 200px;
    top: 0px;
}

/* .submenu li.dropdown > a:after {
    content: "▶";
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: 400;
    margin-left: 8px;
    font-size: 10px;
} */

